fix for table not switching to dark mode

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,7 @@ html[data-theme="dark"] {
 }
 
 
-body {
+body, table {
 	background-color: var(--main-background-color);
 	color: var(--main-text-color);
 	/* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
